--- a/packages/stick-demo/package.json
+++ b/packages/stick-demo/package.json
@@ -2,7 +2,6 @@
   "name": "stick-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
   "scripts": {
     "watch": "parcel ./index.html",
     "test": "exit 1"
@@ -12,5 +11,14 @@
   "dependencies": {
     "parcel": "^2.0.1",
     "typescript": "^4.5.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0"
   }
 }
