Shave a few bytes

--- a/packages/stick-demo/package.json
+++ b/packages/stick-demo/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "watch": "parcel serve --no-cache ./index.html",
+    "build": "parcel build --no-cache ./index.html",
     "test": "exit 1"
   },
   "author": "",
