--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "demo": "npm run -w stick-demo watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
