--- a/packages/stick-demo/package.json
+++ b/packages/stick-demo/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "most": "^1.9.0",
     "parcel": "^2.0.1",
     "typescript": "^4.5.4"
   },
