--- a/packages/stick/package.json
+++ b/packages/stick/package.json
@@ -1,10 +1,22 @@
 {
   "name": "stick",
   "version": "0.0.1",
-  "source": "index.ts",
+  "source": "src/index.ts",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "type": "module",
+  "files": [
+    "/dist/",
+    "/dist/o/"
+  ],
+  "exports": {
+    ".": { "default": "./dist/index.js" },
+    "./jsx-runtime.js": { "default": "./dist/jsx-runtime.js" },
+    "./o": { "default": "./dist/o/index.js" },
+    "./directives": { "default": "./dist/o/index.js" }
+  },
   "scripts": {
-    "build": "parcel build ./index.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -17,7 +29,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
-    "parcel": "^2.0.1"
+    "typescript": "^4.5.4"
   },
   "repository": {
     "type": "git",
