--- a/packages/stick/tsconfig.json
+++ b/packages/stick/tsconfig.json
@@ -7,6 +7,15 @@
       "DOM",
       "DOM.Iterable"
     ],
-    "strict": true
-  }
+    "strict": true,
+    "outDir": "./dist",
+    "declaration": true
+  },
+  "include": [
+    "./src/**/*.ts"
+  ],
+  "exclude": [
+    "./node_modules",
+    "./dist"
+  ]
 }
