--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@stickts/stick",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "source": "src/index.ts",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "/dist/",
     "/dist/o/"
