Add style modules to demo

--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -10,5 +10,7 @@
       "DOM.Iterable"
     ],
     "strict": true,
+    "esModuleInterop": true,
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   }
 }
