--- a/demo/package.json
+++ b/demo/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "parcel": "^2.0.1",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "typescript-plugin-css-modules": "^2.7.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.7.0",
