--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@stickts/stick",
   "version": "0.0.4",
   "source": "src/index.ts",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "type": "module",
   "scripts": {
     "watch": "tsc --watch",
