--- a/package.json
+++ b/package.json
@@ -4,22 +4,28 @@
   "source": "src/index.ts",
   "main": "./index.js",
   "types": "./index.d.ts",
-  "type": "module",
   "scripts": {
     "watch": "tsc --watch",
-    "build": "node ./scripts/build.js"
+    "build": "node ./scripts/build.js",
+    "test": "mocha",
+    "coverage": "nyc --all --include=src/**/*.ts --exclude=**/*.spec.ts npm run test"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
+    "earljs": "^0.1.12",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
+    "mocha": "^9.1.3",
+    "nyc": "^15.1.0",
     "shelljs": "^0.8.4",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "repository": {
