--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "tsc --watch",
     "build": "node ./scripts/build.js",
     "test": "mocha",
-    "coverage": "nyc --all --include=src/**/*.ts --exclude=**/*.spec.ts npm run test",
+    "coverage": "nyc --all --include=src/**/*.ts --exclude=**/*.spec.ts --reporter=html npm run test",
     "ci:test": "mocha",
     "ci:coverage": "nyc --all --include=src/**/*.ts --exclude=**/*.spec.ts --reporter=lcov npm run test"
   },
@@ -24,6 +24,8 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
+    "global-jsdom": "^8.4.0",
+    "jsdom": "^19.0.0",
     "mocha": "^9.1.3",
     "nyc": "^15.1.0",
     "shelljs": "^0.8.4",
