--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "ES2018",
     "moduleResolution": "Node",
+    "jsx": "react-jsx",
+    "jsxImportSource": "@stickts/stick",
     "lib": [
       "ESNext",
       "DOM",
