--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,3 +1,9 @@
+version: 2
+checks:
+  method-lines:
+    config:
+      # This lib heavily relies on closures
+      threshold: 200
 plugins:
   eslint:
     enabled: true
