--- a/demo/package.json
+++ b/demo/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/css": "^11.7.1",
     "parcel": "^2.0.1",
     "typescript": "^4.5.4",
     "typescript-plugin-css-modules": "^2.7.0"
@@ -17,10 +18,12 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
+    "esbuild": "^0.14.11",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0"
+    "eslint-plugin-promise": "^5.2.0",
+    "serve-handler": "^6.1.3"
   }
 }
