--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stickts/stick",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "source": "src/index.ts",
   "main": "./index.js",
   "types": "./index.d.ts",
@@ -24,6 +24,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-react": "^7.28.0",
     "global-jsdom": "^8.4.0",
     "jsdom": "^19.0.0",
     "mocha": "^9.1.3",
